--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-hook-form": "^7.43.9",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
+    "recoil": "^0.7.7",
     "sass": "^1.60.0",
     "web-vitals": "^2.1.4",
     "yup": "^1.1.1"
